syntax = "proto3";
package proto;
option go_package = "github.com/raihanlh/proto;proto";
import "google/protobuf/timestamp.proto";

message RegisterRequest {
    string email = 1;
    string password = 2;
    string confirmPassword = 3;
}

message RegisterResponse {
    string token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message GetByTokenRequest {
    string token = 1;
}

message GetUserResponse {
    int64 id = 1;
	string email = 2;
	int64 role = 3;
	bool enable = 4;
    bool locked = 5;
    google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GetByToken(GetByTokenRequest) returns (GetUserResponse) {}
}




